[package]
name = "ractor-supervisor"
version = "0.1.1"
authors = ["https://github.com/simke9445"]
description = "Supervisor module for ractor framework."
documentation = "https://docs.rs/ractor-supervisor"
license = "MIT"
edition = "2021"
keywords = ["actor", "ractor", "supervisor", "ractor-supervisor", "supervision"]
repository = "https://github.com/simke9445/ractor-supervisor"
readme = "./README.md"
homepage = "https://github.com/simke9445/ractor-supervisor"
categories = ["asynchronous"]
rust-version = "1.83.0"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
ractor = { version = "0.14.3", features = ["async-trait"] }
thiserror = "2.0.11"
if_chain = "1.0.2"
futures-util = "0.3.31"
